--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
   </div>
 
   <footer>
-    Made for Gavin by Grok • Enjoy! 🌲<br>
-    <small>Place sandboxels.html & eaglercraft-offline.html in the same folder</small>
+    <small></small>
   </footer>
 
 </body>
