--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Gavin's Offline Sandboxels + Eaglercraft</title>
+  <title>Gavin's Offline Sandboxels + Eaglercraft + Geometry Dash</title>
   <style>
     body {
       margin: 0;
@@ -91,35 +91,34 @@
   </style>
 </head>
 <body>
-
   <header>
-    <h1>Sandboxels × Eaglercraft</h1>
-    <p></p>
+    <h1>Gavin's Offline Game Hub</h1>
+    <p>Sandboxels × Eaglercraft × Geometry Dash – All offline!</p>
   </header>
-
   <div class="container">
-
     <div class="game-section">
       <h2>Sandboxels – Falling Sand Simulator</h2>
-
       <div class="launch-area">
-        <a href="sandboxels.html" target="_blank" class="offline-button">Launch Sandboxels</a>
+        <a href="sandboxels.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Sandboxels</a>
       </div>
     </div>
 
     <div class="game-section">
       <h2>Eaglercraft – Minecraft</h2>
-
       <div class="launch-area">
-        <a href="eaglercraft-offline.html" target="_blank" class="offline-button">Launch Eaglercraft</a>
+        <a href="eaglercraft-offline.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Eaglercraft</a>
       </div>
     </div>
 
+    <div class="game-section">
+      <h2>Geometry Dash – Rhythm Platformer</h2>
+      <div class="launch-area">
+        <a href="geometry-dash-offline.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Geometry Dash</a>
+      </div>
+    </div>
   </div>
-
   <footer>
     <small></small>
   </footer>
-
 </body>
 </html>
