--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 </head>
 <body>
   <header>
-    <h1>Gavin's Offline Game Hub</h1>
-    <p>Sandboxels × Eaglercraft × Geometry Dash – All offline!</p>
+    <h1> Game Hub</h1>
+    <p>Sandboxels × Eaglercraft × Geometry Dash!</p>
   </header>
   <div class="container">
     <div class="game-section">
