--- a/index.html
+++ b/index.html
@@ -97,21 +97,21 @@
   </header>
   <div class="container">
     <div class="game-section">
-      <h2>Sandboxels – Falling Sand Simulator</h2>
+      <h2>Sandboxels </h2>
       <div class="launch-area">
         <a href="sandboxels.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Sandboxels</a>
       </div>
     </div>
 
     <div class="game-section">
-      <h2>Eaglercraft – Minecraft</h2>
+      <h2>Eaglercraft </h2>
       <div class="launch-area">
         <a href="eaglercraft-offline.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Eaglercraft</a>
       </div>
     </div>
 
     <div class="game-section">
-      <h2>Geometry Dash – Rhythm Platformer</h2>
+      <h2>Geometry Dash </h2>
       <div class="launch-area">
         <a href="geometry-dash-offline.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Geometry Dash</a>
       </div>
