--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
   </div>
   <footer>
-    <small></small>
+    <small>buy me a coffie https://www.youtube.com/watch?v=dQw4w9WgXcQ</small>
   </footer>
 </body>
 </html>
