--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
 
     <div class="game-section">
-      <h2>Eaglercraft </h2>
+      <h2>Eaglercraft/minecraft </h2>
       <div class="launch-area">
         <a href="eaglercraft-offline.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Eaglercraft</a>
       </div>
