--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title> Sandboxels + Eaglercraft + Geometry Dash</title>
+  <title>Sandboxels + Eaglercraft + Geometry Dash + Super Mario</title>
   <style>
     body {
       margin: 0;
@@ -92,33 +92,37 @@
 </head>
 <body>
   <header>
-    <h1> Game Hub</h1>
-    <p>Sandboxels × Eaglercraft × Geometry Dash!</p>
+    <h1>Game Hub</h1>
+    <p>Sandboxels × Eaglercraft × Geometry Dash × Super Mario!</p>
   </header>
   <div class="container">
     <div class="game-section">
-      <h2>Sandboxels </h2>
+      <h2>Sandboxels</h2>
       <div class="launch-area">
         <a href="sandboxels.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Sandboxels</a>
       </div>
     </div>
-
     <div class="game-section">
-      <h2>Eaglercraft/minecraft </h2>
+      <h2>Eaglercraft / Minecraft</h2>
       <div class="launch-area">
         <a href="eaglercraft-offline.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Eaglercraft</a>
       </div>
     </div>
-
     <div class="game-section">
-      <h2>Geometry Dash </h2>
+      <h2>Geometry Dash</h2>
       <div class="launch-area">
         <a href="geometry-dash-offline.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Geometry Dash</a>
       </div>
     </div>
+    <div class="game-section">
+      <h2>Super Mario</h2>
+      <div class="launch-area">
+        <a href="mario.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Super Mario</a>
+      </div>
+    </div>
   </div>
   <footer>
-    <small>buy me a coffie https://www.youtube.com/watch?v=dQw4w9WgXcQ</small>
+    <small>buy me a coffee https://www.youtube.com/watch?v=dQw4w9WgXcQ</small>
   </footer>
 </body>
 </html>
