--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </div>
     </div>
     <div class="game-section">
-      <h2>Super Mario</h2>
+      <h2>Mario</h2>
       <div class="launch-area">
         <a href="mario.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Super Mario</a>
       </div>
