--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="game-section">
       <h2>Mario</h2>
       <div class="launch-area">
-        <a href="mario.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Super Mario</a>
+        <a href="mario.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Mario</a>
       </div>
     </div>
   </div>
