--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sandboxels + Eaglercraft + Geometry Dash + Super Mario</title>
+  <title>Sandboxels + Eaglercraft + Geometry Dash + Mario</title>
   <style>
     body {
       margin: 0;
