--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <body>
   <header>
     <h1>Game Hub</h1>
-    <p>Sandboxels × Eaglercraft × Geometry Dash × Super Mario!</p>
+    <p>Sandboxels × Eaglercraft × Geometry Dash × Mario!</p>
   </header>
   <div class="container">
     <div class="game-section">
