--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sandboxels + Eaglercraft + Geometry Dash + Mario</title>
+  <title>Sandboxels + Eaglercraft + Geometry Dash + Mario + Pac-Man</title>
   <style>
     body {
       margin: 0;
@@ -93,7 +93,7 @@
 <body>
   <header>
     <h1>Game Hub</h1>
-    <p>Sandboxels × Eaglercraft × Geometry Dash × Mario!</p>
+    <p>Sandboxels × Eaglercraft × Geometry Dash × Mario × Pac-Man!</p>
   </header>
   <div class="container">
     <div class="game-section">
@@ -118,6 +118,13 @@
       <h2>Mario</h2>
       <div class="launch-area">
         <a href="mario.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Mario</a>
+      </div>
+    </div>
+    <!-- NEW: Pac-Man -->
+    <div class="game-section">
+      <h2>Pac-Man</h2>
+      <div class="launch-area">
+        <a href="pacman.html" target="_blank" class="offline-button" rel="noopener noreferrer">Launch Pac-Man</a>
       </div>
     </div>
   </div>
